Fixed Buttons on Mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -63,6 +63,8 @@ nav {
 .btn-padel-secondary {
   margin-top: 50px;
   padding: 10px 75px 10px 75px;
+  color: black;
+  border: 2px solid black;
   background-color: transparent;
   font-size: 19px;
   font-weight: 700;
