--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -12,6 +12,10 @@
     }
   }
 
+  .error-message {
+    color: red;
+  }
+
   .register-form-form {
     padding: 20px 0px 0px 0px;
     display: flex;
